--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
         <meta charset="utf-8">
         <title>Hi!</title>
         <link rel="stylesheet" href="style.css">
+        <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+        <link rel="manifest" href="img/site.webmanifest">
     </head>
     <body>
         <div class="banner">
