--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Hi!</title>
+        <title>Maintenance</title>
         <link rel="stylesheet" href="style.css">
         <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
@@ -13,7 +13,8 @@
     <body>
         <div class="banner">
             <div class="content">
-                <h1>Chevly</h1>
+                <h1>This Site is under Maintenance</h1>
+                <p1>I&rsquo;ll be right back!</p1>
             </div>
         </div>
     </body>
